--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -5,3 +5,208 @@ main-titles dark-grey: #2C303F;
 paragraph grey: #5b5e6d;
 nav grey: #5b5e6d;
 */
+
+@media screen and (max-width: 576px) {
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    /* margin: 0 20px 0 20px; */
+    padding: 0;
+    margin: 0;
+  }
+
+  nav {
+    /* height: 200px; */
+    border-bottom: 0.5px solid lightgray;
+  }
+
+  nav img {
+    width: 150px;
+    padding-left: 20px;
+  }
+
+  header {
+    padding: 0 20px 0 20px;
+  }
+
+  header h1 {
+    color: #2c303f;
+  }
+
+  header img {
+    /* display: none; */
+    width: 100%;
+    padding: 5%;
+  }
+
+  header p {
+    color: #5b5e6d;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5em;
+  }
+
+  header input {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 18px;
+    width: 100%;
+    border: 0.5px solid lightgray;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    /* flex-grow: 1; */
+  }
+
+  header button {
+    background-color: #192592;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 18px;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  header a {
+    color: #192592;
+  }
+
+  .section2 {
+    background-color: #f4f3f4;
+    text-align: center;
+    padding: 20px 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section2 p {
+    color: #5b5e6d;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5em;
+  }
+
+  .section2 img {
+      width: 35%;
+      flex-direction: column;
+      padding: 20px 0 20px 0;
+  }
+
+  .discover-btn {
+    border: 1px solid #192592;
+    color: #192592;
+    width: 100%;
+    text-align: center;
+    padding: 18px;
+    border-radius: 5px;
+    background-color: #fff;
+  }
+
+  .section3 h3 {
+    color: #2c303f;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
+
+  .section3 p {
+    color: #5b5e6d;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5em;
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+
+  .section3 {
+    text-align: center;
+    padding: 20px 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .section3 a {
+    color: #192592;
+  }
+
+  .section3 input {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 18px;
+    width: 100%;
+    border: 0.5px solid lightgray;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    /* flex-grow: 1; */
+  }
+
+  .section3 button {
+    background-color: #192592;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 18px;
+    border: none;
+    border-radius: 5px;
+  }
+
+  footer {
+      border-top: 0.5px solid lightgray;
+  }
+
+  footer img {
+      width: 150px;
+  }
+
+  footer ul {
+    list-style-type: none;
+    line-height: 2em;
+    color: #5b5e6d;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .footer {
+      display: flex;
+      flex-wrap: wrap;
+      
+  }
+
+  .footer ul {
+      width: 50%;
+      margin-bottom: 20px;
+      /* padding-right: 200px; */
+  }
+  
+  .footer2 {
+    color: #5b5e6d;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
+  }
+
+  .footer2 img {
+      width: 15px;
+  }
+
+  .bar {
+      display: flex;
+      justify-content: space-around;
+      padding: 0 10% 0 10%;
+      padding-top: 10px;
+  }
+
+  .gray-foot {
+    background-color: #f4f3f4;
+  }
+
+}
